force-app/main/default/objects/loan__Other_Transaction__c/loan__Other_Transaction__c.object-meta.xml
<CustomObject>
    <label>Other Loan Transaction</label>
    <nameField>
        <displayFormat>OLTID-{0000000000}</displayFormat>
        <label>Other Transaction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Other Loan Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>