force-app/main/default/objects/loan__Other_Transaction__c/fields/loan__Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>loan__Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Account</label>
    <referenceTo>loan__Bank_Account__c</referenceTo>
    <relationshipLabel>Other Loan Transactions</relationshipLabel>
    <relationshipName>Other_Loan_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>