force-app/main/default/objects/loan__Other_Transaction__c/fields/loan__Billing_Method__c.field-meta.xml
<CustomField>
    <fullName>loan__Billing_Method__c</fullName>
    <label>Billing Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Declining Balance</fullName>
            </value>
            <value>
                <fullName>Flat</fullName>
            </value>
            <value>
                <fullName>Interest Only</fullName>
            </value>
            <value>
                <fullName>Flexible Repayment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>