force-app/main/default/objects/loan__Other_Transaction__c/fields/loan__Charge__c.field-meta.xml
<CustomField>
    <fullName>loan__Charge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Charge</label>
    <referenceTo>loan__Charge__c</referenceTo>
    <relationshipLabel>Waive/Unwaive Transactions</relationshipLabel>
    <relationshipName>Other_Loan_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>