force-app/main/default/objects/loan__Other_Transaction__c/fields/loan__Charged_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Charged_Off_Date__c</fullName>
    <label>Charged Off Date</label>
    <type>Date</type>
</CustomField>