force-app/main/default/objects/loan__Other_Transaction__c/fields/loan__Charged_Off_Interest__c.field-meta.xml
<CustomField>
    <fullName>loan__Charged_Off_Interest__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Charged Off Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>