force-app/main/default/objects/loan__Other_Transaction__c/fields/loan__Draw_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Draw_Period_End_Date__c</fullName>
    <label>Draw Period End Date</label>
    <type>Date</type>
</CustomField>