force-app/main/default/objects/loan__Other_Transaction__c/fields/loan__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Due_Date__c</fullName>
    <description>Due Date of transaction, this is useful for billing transactions</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>