force-app/main/default/objects/loan__Other_Transaction__c/fields/loan__Frequency_of_Loan_Payment__c.field-meta.xml
<CustomField>
    <fullName>loan__Frequency_of_Loan_Payment__c</fullName>
    <label>Frequency of Loan Payment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi-weekly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>