force-app/main/default/objects/loan__Other_Transaction__c/fields/loan__Interest_Only_Period__c.field-meta.xml
<CustomField>
    <fullName>loan__Interest_Only_Period__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Interest Only Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>