force-app/main/default/objects/loan__Other_Transaction__c/fields/loan__Interest_Rate_Change_Method__c.field-meta.xml
<CustomField>
    <fullName>loan__Interest_Rate_Change_Method__c</fullName>
    <description>This field captures interest rate change method based on &apos;Interest Rate Change Method&apos; field value on &apos;CL Contract&apos; object  at the time of rate change.
Empty/blank - Keeps the current schedule
Keep Same Payment Amount - Changes loan maturity date keeping same installment
Change Payment Amount - Changes installment amount keeping same maturity date</description>
    <inlineHelpText>This field captures interest rate change method based on &apos;Interest Rate Change Method&apos; field value on &apos;CL Contract&apos; object  at the time of rate change</inlineHelpText>
    <label>Interest Rate Change Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>