force-app/main/default/objects/loan__Other_Transaction__c/fields/loan__Internal_Accounting_Generated__c.field-meta.xml
<CustomField>
    <fullName>loan__Internal_Accounting_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internal Accounting Generated</label>
    <type>Checkbox</type>
</CustomField>