force-app/main/default/objects/loan__Other_Transaction__c/fields/loan__Ipt_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>loan__Ipt_Snapshot__c</fullName>
    <defaultValue>&quot;&quot;</defaultValue>
    <description>Field will contain the snapshot of the Interest Posting Transaction before reschedule</description>
    <label>IPT Snapshot</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>