force-app/main/default/objects/loan__Other_Transaction__c/fields/loan__Loan_Account__c.field-meta.xml
<CustomField>
    <fullName>loan__Loan_Account__c</fullName>
    <label>Loan Account</label>
    <referenceTo>loan__Loan_Account__c</referenceTo>
    <relationshipLabel>Other Loan Transactions</relationshipLabel>
    <relationshipName>Other_Loan_Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>