force-app/main/default/objects/loan__Other_Transaction__c/fields/loan__Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>loan__Loan_Amount__c</fullName>
    <inlineHelpText>Loan Amount before the transaction was posted.</inlineHelpText>
    <label>Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>