force-app/main/default/objects/loan__Other_Transaction__c/fields/loan__Loan_Disbursal_Transaction__c.field-meta.xml
<CustomField>
    <fullName>loan__Loan_Disbursal_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Disbursal Transaction</label>
    <referenceTo>loan__Loan_Disbursal_Transaction__c</referenceTo>
    <relationshipLabel>Principal Adjustment Transactions</relationshipLabel>
    <relationshipName>Other_Loan_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>