force-app/main/default/objects/loan__Other_Transaction__c/fields/loan__Loan_Payment_Id__c.field-meta.xml
<CustomField>
    <fullName>loan__Loan_Payment_Id__c</fullName>
    <description>Stores the Id of Loan Payment Tranasction when partial payoff happens</description>
    <inlineHelpText>Stores the Id of Loan Payment Tranasction when partial payoff happens</inlineHelpText>
    <label>Loan_Payment_ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>