force-app/main/default/objects/loan__Other_Transaction__c/fields/loan__Loan_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>loan__Loan_Snapshot__c</fullName>
    <defaultValue>&quot;&quot;</defaultValue>
    <label>Loan Snapshot</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>