force-app/main/default/objects/loan__Other_Transaction__c/fields/loan__New_Due_Day__c.field-meta.xml
<CustomField>
    <fullName>loan__New_Due_Day__c</fullName>
    <label>New Due Day</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>