force-app/main/default/objects/loan__Other_Transaction__c/fields/loan__Next_Due_Generation_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Next_Due_Generation_Date__c</fullName>
    <label>Next Due Generation Date</label>
    <type>Date</type>
</CustomField>