force-app/main/default/objects/loan__Other_Transaction__c/fields/loan__Number_of_Installments__c.field-meta.xml
<CustomField>
    <fullName>loan__Number_of_Installments__c</fullName>
    <label>Number of Installments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>