force-app/main/default/objects/loan__Other_Transaction__c/fields/loan__Number_Of_Interest_Only_Payments__c.field-meta.xml
<CustomField>
    <fullName>loan__Number_Of_Interest_Only_Payments__c</fullName>
    <description>This field is use to keep tract of Interest Only Payment specified in Loan Disbursal Transaction.</description>
    <inlineHelpText>This field is use to keep tract of Interest Only Payment specified in Loan Disbursal Transaction.</inlineHelpText>
    <label>Number Of Interest Only Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>