force-app/main/default/objects/loan__Other_Transaction__c/fields/loan__OT_ACH_Drawer_Address2__c.field-meta.xml
<CustomField>
    <fullName>loan__OT_ACH_Drawer_Address2__c</fullName>
    <description>ACH Drawer Address Line 2</description>
    <inlineHelpText>ACH Drawer Address Line 2</inlineHelpText>
    <label>ACH Drawer Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>