force-app/main/default/objects/loan__Other_Transaction__c/fields/loan__Pay_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Pay_Off_Date__c</fullName>
    <description>Date for the pay off quote</description>
    <label>Pay Off Date</label>
    <type>Date</type>
</CustomField>