force-app/main/default/objects/loan__Other_Transaction__c/fields/loan__Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>loan__Payment_Amount__c</fullName>
    <label>Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>