force-app/main/default/objects/loan__Other_Transaction__c/fields/loan__Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>loan__Purchase_Price__c</fullName>
    <inlineHelpText>This is the purchase price of the contract.</inlineHelpText>
    <label>Purchase Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>