force-app/main/default/objects/loan__Other_Transaction__c/fields/loan__Repayment_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Repayment_Start_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Repayment Start Date</label>
    <type>Date</type>
</CustomField>