force-app/main/default/objects/loan__Other_Transaction__c/fields/loan__Reschedule_Option_On_Excess_Payment__c.field-meta.xml
<CustomField>
    <fullName>loan__Reschedule_Option_On_Excess_Payment__c</fullName>
    <description>This field captures reschedule option on excess payment based on &apos;Reschedule Option On Excess Payment&apos; field value on &apos;CL Contract&apos; object  at the time of excess payment with respect to excess threshold :
Keep Same Payment Amount - Changes loan maturity date keeping same installment
Change Payment Amount - Changes installment amount keeping same maturity date</description>
    <inlineHelpText>This field captures reschedule option on excess payment based on &apos;Reschedule Option On Excess Payment&apos; field value on &apos;CL Contract&apos; object  at the time of excess payment with respect to excess threshold</inlineHelpText>
    <label>Reschedule Option On Excess Payment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Change Payment Amount</fullName>
            </value>
            <value>
                <fullName>Keep Same Payment Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>