force-app/main/default/objects/loan__Other_Transaction__c/fields/loan__Total_Interest_Due__c.field-meta.xml
<CustomField>
    <fullName>loan__Total_Interest_Due__c</fullName>
    <label>Total Interest Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>