force-app/main/default/objects/loan__Other_Transaction__c/fields/loan__Txn_Amt__c.field-meta.xml
<CustomField>
    <fullName>loan__Txn_Amt__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Transaction Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>