force-app/main/default/objects/loan__Other_Transaction__c/fields/loan__Txn_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Txn_Date__c</fullName>
    <defaultValue>$User.loan__Current_Branch_s_System_Date__c</defaultValue>
    <label>Transaction Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>