force-app/main/default/objects/loan__Other_Transaction__c/recordTypes/loan__Additional_Repayment_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>loan__Additional_Repayment_Record_Type</fullName>
    <active>true</active>
    <label>Additional Repayment  Record Type</label>
</RecordType>