force-app/main/default/objects/loan__Other_Transaction__c/recordTypes/loan__Buyback_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>loan__Buyback_Record_Type</fullName>
    <active>true</active>
    <description>This record type if for transactions representing buyback process</description>
    <label>Buyback Record Type</label>
</RecordType>