force-app/main/default/objects/loan__Other_Transaction__c/recordTypes/loan__Charge_Unwaive_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>loan__Charge_Unwaive_Record_Type</fullName>
    <active>true</active>
    <label>Charge Unwaive Record Type</label>
</RecordType>