force-app/main/default/objects/loan__Other_Transaction__c/recordTypes/loan__Contingency_Status_Change.recordType-meta.xml
<RecordType>
    <fullName>loan__Contingency_Status_Change</fullName>
    <active>true</active>
    <label>Contingency Status Change</label>
</RecordType>