force-app/main/default/objects/loan__Other_Transaction__c/recordTypes/loan__Credit_Limit_Change_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>loan__Credit_Limit_Change_Record_Type</fullName>
    <active>true</active>
    <label>Credit Limit Change Record Type</label>
</RecordType>