force-app/main/default/objects/loan__Other_Transaction__c/recordTypes/loan__Delinquent_Pmt_Plan_Reversal_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>loan__Delinquent_Pmt_Plan_Reversal_Record_Type</fullName>
    <active>true</active>
    <label>Delinquent Pmt Plan Reversal Record Type</label>
</RecordType>