force-app/main/default/objects/loan__Other_Transaction__c/recordTypes/loan__Due_Day_Change_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>loan__Due_Day_Change_Record_Type</fullName>
    <active>true</active>
    <label>Due Day Change Record Type</label>
</RecordType>