force-app/main/default/objects/loan__Other_Transaction__c/recordTypes/loan__Extension_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>loan__Extension_Record_Type</fullName>
    <active>true</active>
    <label>Extension Record Type</label>
</RecordType>