force-app/main/default/objects/loan__Other_Transaction__c/recordTypes/loan__Interest_UnWaive_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>loan__Interest_UnWaive_Record_Type</fullName>
    <active>true</active>
    <description>Interest UnWaive Record Type</description>
    <label>Interest UnWaive Record Type</label>
</RecordType>