force-app/main/default/objects/loan__Other_Transaction__c/recordTypes/loan__Interest_Waived_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>loan__Interest_Waived_Record_Type</fullName>
    <active>true</active>
    <label>Interest Waived Record Type</label>
</RecordType>