force-app/main/default/objects/loan__Other_Transaction__c/recordTypes/loan__Ioa_Unwaive_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>loan__Ioa_Unwaive_Record_Type</fullName>
    <active>true</active>
    <label>IOA Unwaive Record Type</label>
</RecordType>