force-app/main/default/objects/loan__Other_Transaction__c/recordTypes/loan__Loan_Amount_Adjustment_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>loan__Loan_Amount_Adjustment_Record_Type</fullName>
    <active>true</active>
    <label>Loan Amount Adjustment Record Type</label>
</RecordType>