force-app/main/default/objects/loan__Other_Transaction__c/recordTypes/loan__Loan_Maintenance_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>loan__Loan_Maintenance_Record_Type</fullName>
    <active>true</active>
    <label>Loan Maintenance Record Type</label>
</RecordType>