force-app/main/default/objects/loan__Other_Transaction__c/recordTypes/loan__One_Time_ACH_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>loan__One_Time_ACH_Record_Type</fullName>
    <active>true</active>
    <label>One Time ACH Record Type</label>
</RecordType>