force-app/main/default/objects/loan__Other_Transaction__c/recordTypes/loan__Payment_Change_Reversal_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>loan__Payment_Change_Reversal_Record_Type</fullName>
    <active>true</active>
    <label>Payment Change Reversal Record Type</label>
</RecordType>