force-app/main/default/objects/loan__Other_Transaction__c/recordTypes/loan__Payment_Tolerance_Change.recordType-meta.xml
<RecordType>
    <fullName>loan__Payment_Tolerance_Change</fullName>
    <active>true</active>
    <label>Payment Tolerance Change</label>
</RecordType>