force-app/main/default/objects/loan__Other_Transaction__c/recordTypes/loan__PayOff_Quote_Generation_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>loan__PayOff_Quote_Generation_Record_Type</fullName>
    <active>true</active>
    <label>PayOff Quote Generation Record Type</label>
</RecordType>