force-app/main/default/objects/loan__Other_Transaction__c/recordTypes/loan__PrincipalAdjustment_Add_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>loan__PrincipalAdjustment_Add_Record_Type</fullName>
    <active>true</active>
    <label>PrincipalAdjustment-Add Record Type</label>
</RecordType>