force-app/main/default/objects/loan__Other_Transaction__c/recordTypes/loan__Refund_Reversal_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>loan__Refund_Reversal_Record_Type</fullName>
    <active>true</active>
    <label>Refund Reversal Record Type</label>
</RecordType>