force-app/main/default/objects/loan__Other_Transaction__c/recordTypes/loan__Start_Accrual_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>loan__Start_Accrual_Record_Type</fullName>
    <active>true</active>
    <label>Start Accrual Record Type</label>
</RecordType>