force-app/main/default/objects/loan__Other_Transaction__c/recordTypes/loan__Write_Off_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>loan__Write_Off_Record_Type</fullName>
    <active>true</active>
    <label>Write Off Record Type</label>
</RecordType>