force-app/main/default/objects/loan__Other_Transaction__c/validationRules/forbearance_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>forbearance_Check</fullName>
    <active>false</active>
    <errorConditionFormula>AND(loan__Repayment_Start_Date__c-loan__Loan_Account__r.loan__Last_Accrual_Date__c &gt; 150,ISPICKVAL(loan__Transaction_Type__c,&apos;Reschedule&apos;))</errorConditionFormula>
    <errorMessage>Forbearance up to max 6 month</errorMessage>
</ValidationRule>