force-app/main/default/objects/loan__Other_Transaction__c/validationRules/loan__ACH_Account_Number_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__ACH_Account_Number_Check</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(loan__OT_ACH_Account_Number__c)) &amp;&amp; NOT(ISNUMBER( loan__OT_ACH_Account_Number__c ))</errorConditionFormula>
    <errorMessage>Account number should be numeric.</errorMessage>
</ValidationRule>