force-app/main/default/objects/loan__Other_Transaction__c/validationRules/loan__ACH_Fee_Amount_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__ACH_Fee_Amount_Check</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK( loan__OT_ACH_Fee_Amount__c )) &amp;&amp; (loan__OT_ACH_Fee_Amount__c &lt; 0) &amp;&amp;  ISPICKVAL(loan__Transaction_Type__c  , &apos;One Time ACH&apos;)</errorConditionFormula>
    <errorMessage>Fee amount cannot be zero or negative.</errorMessage>
</ValidationRule>