force-app/main/default/objects/loan__Other_Transaction__c/validationRules/loan__ACH_Payment_Amount_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__ACH_Payment_Amount_Check</fullName>
    <active>true</active>
    <errorConditionFormula>$Setup.loan__ACH_Parameters__c.loan__Use_Lock_Based_ACH__c  = true &amp;&amp;
NOT(ISBLANK( loan__OT_ACH_Payment_Amount__c )) &amp;&amp; (loan__OT_ACH_Payment_Amount__c &lt;= 0) &amp;&amp;
(ISPICKVAL(loan__Transaction_Type__c , &apos;One Time ACH&apos;)|| ISPICKVAL(loan__Transaction_Type__c , &apos;Recurring ACH&apos;))</errorConditionFormula>
    <errorMessage>ACH payment amount cannot be zero or negative.</errorMessage>
</ValidationRule>