force-app/main/default/objects/loan__Other_Transaction__c/validationRules/loan__ACH_Routing_Number_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__ACH_Routing_Number_Check</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK( loan__OT_ACH_Routing_Number__c )) &amp;&amp; ( LEN(loan__OT_ACH_Routing_Number__c )!=9 &amp;&amp; ( ISPICKVAL(loan__Transaction_Type__c , &apos;One Time ACH&apos;) || ISPICKVAL(loan__Transaction_Type__c , &apos;Recurring ACH&apos;)))</errorConditionFormula>
    <errorMessage>Routing number should be 9 digits.</errorMessage>
</ValidationRule>