force-app/main/default/objects/loan__Other_Transaction__c/validationRules/loan__ACH_Start_Date_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__ACH_Start_Date_Check</fullName>
    <active>true</active>
    <errorConditionFormula>$Setup.loan__ACH_Parameters__c.loan__Use_Lock_Based_ACH__c  = true &amp;&amp;
ISPICKVAL(loan__Transaction_Type__c , &apos;Recurring ACH&apos;) &amp;&amp;
loan__ACH_Start_Date__c &gt;  loan__OT_ACH_Debit_Date__c &amp;&amp;  ISNEW()</errorConditionFormula>
    <errorMessage>ACH start date should be less than Debit date.</errorMessage>
</ValidationRule>