force-app/main/default/objects/loan__Other_Transaction__c/validationRules/loan__Frequency_Cycle_Input_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Frequency_Cycle_Input_Validation</fullName>
    <active>true</active>
    <description>Frequency Cycle can not be less than or equal to zero
Frequency Cycle is allowed only for Monthly, Daily and Weekly Frequencies</description>
    <errorConditionFormula>AND( NOT( ISNULL(loan__ACH_Frequency_Cycle__c) ) ,OR(loan__ACH_Frequency_Cycle__c  &lt;= 0 , AND( loan__ACH_Frequency_Cycle__c &gt; 1, OR(ISPICKVAL(loan__ACH_Frequency__c, &apos;Bi-weekly&apos;),
ISPICKVAL(loan__ACH_Frequency__c, &apos;Semi-Monthly&apos;),
ISPICKVAL(loan__ACH_Frequency__c, &apos;Bi-Monthly&apos;),
ISPICKVAL(loan__ACH_Frequency__c, &apos;Quarterly&apos;),
ISPICKVAL(loan__ACH_Frequency__c, &apos;Semi-Annual&apos;),
ISPICKVAL(loan__ACH_Frequency__c, &apos;Annual&apos;),
ISPICKVAL(loan__ACH_Frequency__c, &apos;Single-Payment&apos;)))))</errorConditionFormula>
    <errorMessage>Kindly Add correct Value for Frequency Cycle , Either value is less than or equal to zero, or selected Payment Frequency is not supported.</errorMessage>
</ValidationRule>