force-app/main/default/objects/loan__Other_Transaction__c/validationRules/loan__Payment_Tolerance_Dates_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Payment_Tolerance_Dates_Check</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(  loan__Payment_Tolerance_Start_Date__c )) &amp;&amp; NOT(ISBLANK(  loan__Payment_Tolerance_End_Date__c )) &amp;&amp; (loan__Payment_Tolerance_Start_Date__c &gt; loan__Payment_Tolerance_End_Date__c) &amp;&amp; ISPICKVAL(loan__Transaction_Type__c , &apos;Payment Tolerance Change&apos;)</errorConditionFormula>
    <errorMessage>Payment tolerance end date should be greater than start date.</errorMessage>
</ValidationRule>