force-app/main/default/objects/loan__Other_Transaction__c/validationRules/loan__Prin_Adj_Already_Rev_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Prin_Adj_Already_Rev_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( loan__Transaction_Type__c , &apos;PrincipalAdjustment-Add Reversal&apos;),
 loan__Reversed__c
)</errorConditionFormula>
    <errorMessage>Transaction is already reversed.</errorMessage>
</ValidationRule>